- Fixed underline visible when not hovering on element

--- a/my-app/src/components/Project/Project.module.css
+++ b/my-app/src/components/Project/Project.module.css
@@ -39,6 +39,7 @@
     margin-right: 5%;
     font-size: 20px;
     color: rgb(65, 131, 196);
+    text-decoration: none;
 }
 
 
